WIP: trying to obtain the correct format

--- a/index.html
+++ b/index.html
@@ -10,29 +10,28 @@
 
 <body>
     <h1 class="collectors"><font color=white> Crystal Collectors!</h1>
-    <section>
-        <p>
-            <font color=green>You will be given a random number at the start of the game.</font>
-        </p>
+    <p class="paragraph">
+        <font color=green>You will be given a random number at the start of the game.</font>
         <br>
-        <p>
-            <font color=green>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.</font>
-        </p>
         <br>
-        <p>
-            <font color=green>You win the game by matching your total score to the random number, you lose the game if your total score goes above the random number.</font>
-        </p>
+        <font color=green>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.</font>
         <br>
-        <p>
-            <font color=green>The value of each crystal is hidden from you until you click on it.</font>
-        </p>
         <br>
-        <p>
-            <font color=green>Each time when the game starts, the game will change the values of each crystal.</font>
-        </p>
-        <h1><font color=purple> <span id="number-to-guess"></span></font></h1>
-    </section>
-    <h2 class="numberToGuess"></h2>
+        <font color=green>You win the game by matching your total score to the random number, you lose the game if your total score goes above the random number.</font>
+        <br>
+        <br>
+        <font color=green>The value of each crystal is hidden from you until you click on it.</font>
+        <br>
+        <br>
+        <font color=green>Each time when the game starts, the game will change the values of each crystal.</font>
+    </p>
+   
+    <h2 class="number-to-guess" id="number-to-guess"><font color=purple></font></h2>
+    <h2 class="aside">
+    <font color=black>Wins:</font>
+    <br><br>
+    <font color=black>Loss:</font>
+    </h2>
     <div id="crystals"></div>
     <p class="user">Your total score is:</p>
     <p class="current-score"></p>
